# ann-camilotron-8000

./: .gitattributes  .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  nn_jupyter.ipynb  objects.inv  pyproject.toml  real_state.py
.github/workflows/: lint.yml
dev/: index.html
dev/tests/: ann_test.py
docs/: dev.md  index.md  reference.md
docs/examples/: bank.md  real_state.md
examples/: bank.ipynb  bank.py  fashion.ipynb  fashion.py  iris.ipynb  iris.py  mnist.ipynb  mnist.py  real_state.ipynb  real_state.py
examples/bank/: index.html
examples/real_state/: index.html
reference/: index.html
search/: search_index.json
src/: ann.py  main.py
src/lib/: activations.py  evaluation.py  neural_network.py  nn_functional.py  plotting.py  preprocessing.py  reporting.py
test/: nn_functional_test.py
