[project]
name = "camilo"
version = "0.1.0"
authors = ["Gabriel Avila", "Carlos Botelho", "Juan Lopes"]
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "pytest>=8.4.0",
    "ruff>=0.11.11",
    "scikit-learn>=1.7.0",
]

[tool.pyrefly]
project_includes = ["src/lib"]
warn_unused_ignores = true
warn_untyped_defs = true

[tool.ruff]
line-length = 88
extend-select = ["E"]

[tool.pytest.ini_options]
pythonpath = ["src/lib"]
