[project]
name = "ann-camilotron-8000"
version = "1.0"
authors = [
  { name = "Gabriel Avila" },
  { name = "Carlos Botelho" },
  { name = "Juan Lopes" }
]
keywords = ["jax", "artificial neural network", "kaggle", "diy", "educational"]
description = "Uma rede neural artificial simples, vetorizada com JAX e implementada com backpropagação manual"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Education",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "jax>=0.6.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
]

[project.urls]
Homepage = "https://github.com/avila-gabriel/ann-camilotron-8000"
Documentation = "https://avila-gabriel.github.io/ann-camilotron-8000/"

[tool.pyrefly]
project_includes = ["src"]
warn_unused_ignores = true
warn_untyped_defs = true

[tool.ruff]
line-length = 88
extend-select = ["E"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "jupytext>=1.17.2",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.14",
    "mkdocstrings[python]>=0.29.1",
    "pytest>=8.4.0",
    "ruff>=0.11.11",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
